tests/parser/bad/lib/lmodule-library-cid-type-with.scillib
library TestLib

(* Missing 'House' *)

type of
| Kind of String
